--- a/arch/arm/boot/dts/bema9x.dts
+++ b/arch/arm/boot/dts/bema9x.dts
@@ -25,7 +25,7 @@
 
 	backlight_lcd {
 		compatible = "pwm-backlight";
-		pwms = <&pwm4 0 5000000>;
+		pwms = <&pwm4 0 5000000 0>;
 		brightness-levels = <0 1 5 10 18 28 41 56
 				     73 92 113 137 163 192 222 255>;
 		default-brightness-level = <14>;
@@ -37,17 +37,17 @@
 		compatible = "pwm-leds";
 		red {
 			label = "led_red";
-			pwms = <&pwm5 0 7812500>;
+			pwms = <&pwm5 0 7812500 0>;
 			max-brightness = <255>;
 		};
 		blue {
 			label = "led_blue";
-			pwms = <&pwm6 0 7812500>;
+			pwms = <&pwm6 0 7812500 0>;
 			max-brightness = <255>;
 		};
 		yellow{
 			label = "led_yellow";
-			pwms = <&pwm7 0 7812500>;
+			pwms = <&pwm7 0 7812500 0>;
 			max-brightness = <255>;
 		};
 	};
