--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -58,3 +58,4 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mpr2.dtb \
 			  picocoremx8mpr2-lcdif-g133han01.dtb \
 			  picocoremx8mpr2-adp-aud1.dtb
 dtb-$(CONFIG_ARCH_MXC) += efusmx8mp.dtb
+dtb-$(CONFIG_ARCH_MXC) += fssmmx8mp.dtb
