--- a/arch/arm64/configs/fsimx8mp_defconfig
+++ b/arch/arm64/configs/fsimx8mp_defconfig
@@ -388,6 +388,7 @@ CONFIG_SYSCON_REBOOT_MODE=y
 CONFIG_BATTERY_SBS=m
 CONFIG_BATTERY_BQ27XXX=y
 CONFIG_SENSORS_ARM_SCPI=y
+CONFIG_SENSORS_LM75=y
 CONFIG_SENSORS_LM90=m
 CONFIG_SENSORS_PWM_FAN=m
 CONFIG_SENSORS_INA2XX=m
