--- a/arch/arm64/configs/fsimx8mn_defconfig
+++ b/arch/arm64/configs/fsimx8mn_defconfig
@@ -112,6 +112,7 @@ CONFIG_IP6_NF_TARGET_MASQUERADE=m
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_NET_DSA=y
+CONFIG_REALTEK_PHY=y
 CONFIG_VLAN_8021Q=y
 CONFIG_VLAN_8021Q_GVRP=y
 CONFIG_VLAN_8021Q_MVRP=y
@@ -247,10 +248,12 @@ CONFIG_KEYBOARD_SNVS_PWRKEY=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=m
 CONFIG_TOUCHSCREEN_GOODIX=y
+CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 CONFIG_TOUCHSCREEN_FT5X06=y
 CONFIG_TOUCHSCREEN_TSC2004=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=m
 CONFIG_TOUCHSCREEN_FTS=y
+CONFIG_TOUCHSCREEN_ILITEK=y
 CONFIG_INPUT_MISC=y
 # CONFIG_SERIO_SERPORT is not set
 CONFIG_LEGACY_PTY_COUNT=16
@@ -322,7 +325,6 @@ CONFIG_DRM_PANEL_NOVATEK_NT35521=y
 CONFIG_DRM_NWL_MIPI_DSI=y
 CONFIG_DRM_NXP_SEIKO_43WVFIG=y
 CONFIG_DRM_SII902X=m
-CONFIG_DRM_TOSHIBA_FUS_TC358775=y
 CONFIG_DRM_TOSHIBA_TC358775=y
 CONFIG_DRM_LONTIUM_LT9211=y
 CONFIG_DRM_I2C_ADV7511=y
