--- a/arch/arm64/boot/dts/F+S/picocoremx8mn-ddr3l.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn-ddr3l.dts
@@ -119,6 +119,7 @@
 #include <dt-bindings/pwm/pwm.h>
 #include <dt-bindings/rtc/nxp,pcf85263.h>
 #include <dt-bindings/usb/pd.h>
+#include <fsversion.h>
 
 / {
 	model = "F&S PicoCoreMX8MX-NANO";
@@ -154,7 +155,8 @@
 	/* -------------------- BOARD INFO -------------------- */
 	bdinfo {
 		compatible = "bdinfo";
-		board_name = "picocoremx8mx-nano";
+		board_name = "picocoremx8mn-ddr3l";
+		dts_version = FS_LINUX_VERSION;
 	};
 
 #if 0
@@ -164,6 +166,11 @@
 		stdout-path = &uart1;
 	};
 #endif
+	/* Busfreq scaling is not working with DDR3L-RAM so we
+     * disable it for now */
+	busfreq {
+		status="disabled";
+	};
 
 	reserved-memory {
 		/* global autoconfigured region for contiguous allocations */
@@ -179,11 +186,6 @@
 			 * uncomment the following line
 			 */
 			//no-uboot-override;
-		};
-
-		rpmsg_reserved: rpmsg@0xb8000000 {
-			no-map;
-			reg = <0 0xb8000000 0 0x400000>;
 		};
 	};
 
@@ -369,10 +371,15 @@
 	pmic@4b {
 		compatible = "rohm,bd71847";
 		reg = <0x4b>;
+		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_pmic>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <10 GPIO_ACTIVE_LOW>;
 		rohm,reset-snvs-powered;
+
+		#clock-cells = <0>;
+		clocks = <&osc_32k 0>;
+		clock-output-names = "clk-32k-out";
 
 		regulators {
 			buck1_reg: BUCK1 {
@@ -382,6 +389,8 @@
 				regulator-boot-on;
 				regulator-always-on;
 				regulator-ramp-delay = <1250>;
+				rohm,dvs-run-voltage = <850000>;
+				rohm,dvs-suspend-voltage = <750000>;
 			};
 
 			buck2_reg: BUCK2 {
@@ -393,6 +402,7 @@
 				regulator-ramp-delay = <1250>;
 				rohm,dvs-run-voltage = <1000000>;
 				rohm,dvs-idle-voltage = <900000>;
+				rohm,dvs-suspend-voltage = <0>;
 			};
 
 			buck3_reg: BUCK3 {
@@ -639,17 +649,7 @@
 };
 #endif
 
-#ifdef SUPPORT_M4
-&rpmsg{
-	/*
-	 * 64K for one rpmsg instance:
-	 * --0xb8000000~0xb800ffff: pingpong
-	 */
-	vdev-nums = <1>;
-	reg = <0x0 0xb8000000 0x0 0x10000>;
-	status = "okay";
-};
-#endif
+
 
 #ifdef CONFIG_PICOCOREMX8MX_NANO_SGTL5000_AUDIO
 &sai5 {
@@ -865,6 +865,8 @@
 
 #ifdef CONFIG_PICOCOREMX8MX_NANO_SD_A
 &usdhc1 {
+	assigned-clocks = <&clk IMX8MN_CLK_USDHC1>;
+	assigned-clock-rates = <200000000>;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc1>, <&pinctrl_usdhc1_gpio>;
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>, <&pinctrl_usdhc1_gpio>;
@@ -893,6 +895,8 @@
 /* WLAN */
 #ifdef CONFIG_PICOCOREMX8MX_NANO_SD_B
 &usdhc2 {
+	assigned-clocks = <&clk IMX8MN_CLK_USDHC2>;
+	assigned-clock-rates = <200000000>;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc2>, <&pinctrl_usdhc2_gpio>;
 	pinctrl-1 = <&pinctrl_usdhc2_100mhz>, <&pinctrl_usdhc2_gpio>;
@@ -917,6 +921,8 @@
 
 #ifdef CONFIG_PICOCOREMX8MX_NANO_EMMC
 &usdhc3 {
+	assigned-clocks = <&clk IMX8MN_CLK_USDHC3>;
+	assigned-clock-rates = <400000000>;
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc3>;
 	pinctrl-1 = <&pinctrl_usdhc3_100mhz>;
@@ -996,6 +1002,17 @@
 };
 
 &A53_0 {
+	cpu-supply = <&buck2_reg>;
+};
+&A53_1 {
+	cpu-supply = <&buck2_reg>;
+};
+
+&A53_2 {
+	cpu-supply = <&buck2_reg>;
+};
+
+&A53_3 {
 	cpu-supply = <&buck2_reg>;
 };
 
