dts: F+S: add picocoremx8ulp devicetree

--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -1,3 +1,4 @@
 dtb-$(CONFIG_ARCH_MXC) += \
-		fsimx8ulp.dtb \
-		soldercore8ulp-bbhd.dtb
+		soldercore8ulp-bbhd.dtb \
+		picocoremx8ulp.dtb \
+		picocoremx8ulp-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb
