--- a/arch/arm64/configs/fsimx8ulp_defconfig
+++ b/arch/arm64/configs/fsimx8ulp_defconfig
@@ -1,5 +1,3 @@
-CONFIG_DRM_PANEL_NEWVISION_NV3051D=y
-CONFIG_DRM_PANEL_NOVATEK_NT35521=y
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_AUDIT=y
@@ -47,6 +45,7 @@ CONFIG_KEXEC=y
 CONFIG_KEXEC_FILE=y
 CONFIG_CRASH_DUMP=y
 CONFIG_XEN=y
+CONFIG_ARCH_FORCE_MAX_ORDER=14
 CONFIG_COMPAT=y
 CONFIG_RANDOMIZE_BASE=y
 CONFIG_PM_DEBUG=y
@@ -148,7 +147,6 @@ CONFIG_NET_SCH_TAPRIO=m
 CONFIG_NET_SCH_MQPRIO=m
 CONFIG_NET_SCH_INGRESS=m
 CONFIG_NET_CLS_BASIC=m
-CONFIG_NET_CLS_TCINDEX=m
 CONFIG_NET_CLS_FLOWER=m
 CONFIG_NET_CLS_ACT=y
 CONFIG_NET_ACT_GACT=m
@@ -188,7 +186,6 @@ CONFIG_NET_9P_VIRTIO=y
 CONFIG_NFC=m
 CONFIG_NFC_NCI=m
 CONFIG_NFC_S3FWRN5_I2C=m
-CONFIG_PAGE_POOL_STATS=y
 CONFIG_PCI=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_PCI_IOV=y
@@ -327,7 +324,6 @@ CONFIG_DWMAC_GENERIC=m
 CONFIG_AQUANTIA_PHY=y
 CONFIG_BROADCOM_PHY=m
 CONFIG_BCM54140_PHY=m
-CONFIG_INPHI_PHY=y
 CONFIG_MARVELL_PHY=m
 CONFIG_MARVELL_10G_PHY=m
 CONFIG_MICREL_PHY=y
@@ -360,6 +356,9 @@ CONFIG_USB_NET_MCS7830=m
 CONFIG_USB_NET_CDC_SUBSET=m
 CONFIG_USB_NET_ZAURUS=m
 CONFIG_HOSTAP=y
+CONFIG_MWIFIEX=y
+CONFIG_MWIFIEX_SDIO=y
+CONFIG_MWIFIEX_USB=y
 CONFIG_WL18XX=m
 CONFIG_WLCORE_SDIO=m
 CONFIG_XEN_NETDEV_BACKEND=m
@@ -372,13 +371,13 @@ CONFIG_KEYBOARD_SNVS_PWRKEY=y
 CONFIG_KEYBOARD_BBNSM_PWRKEY=y
 CONFIG_KEYBOARD_IMX_SC_KEY=y
 CONFIG_KEYBOARD_CROS_EC=y
-CONFIG_TOUCHSCREEN_FTS=y
-CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_TOUCHSCREEN_EXC3000=m
 CONFIG_TOUCHSCREEN_GOODIX=m
 CONFIG_TOUCHSCREEN_EDT_FT5X06=m
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=m
+CONFIG_TOUCHSCREEN_FTS=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PWM_BEEPER=m
 CONFIG_INPUT_PWM_VIBRA=m
@@ -501,7 +500,6 @@ CONFIG_IMX_SC_WDT=y
 CONFIG_IMX7ULP_WDT=y
 CONFIG_ARM_SMC_WATCHDOG=y
 CONFIG_XEN_WDT=y
-CONFIG_ARCH_FORCE_MAX_ORDER=14
 CONFIG_MFD_ADP5585=y
 CONFIG_MFD_BD9571MWV=y
 CONFIG_MFD_AXP20X_I2C=y
@@ -587,8 +585,9 @@ CONFIG_DRM_RCAR_DW_HDMI=m
 CONFIG_DRM_PANEL_BOE_TV101WUM_NL6=m
 CONFIG_DRM_PANEL_LVDS=m
 CONFIG_DRM_PANEL_SIMPLE=y
+CONFIG_DRM_PANEL_NEWVISION_NV3051D=y
+CONFIG_DRM_PANEL_NOVATEK_NT35521=y
 CONFIG_DRM_PANEL_MANTIX_MLAF057WE51=m
-CONFIG_DRM_PANEL_ONTAT_KD50G21_40NT_A1=y
 CONFIG_DRM_PANEL_RAYDIUM_RM67191=y
 CONFIG_DRM_PANEL_RAYDIUM_RM68200=y
 CONFIG_DRM_PANEL_ROCKTECK_HIMAX8394F=y
@@ -804,8 +803,8 @@ CONFIG_LEDS_CLASS_MULTICOLOR=m
 CONFIG_LEDS_LM3692X=m
 CONFIG_LEDS_PCA9532=m
 CONFIG_LEDS_GPIO=y
-CONFIG_LEDS_PCA995X=m
 CONFIG_LEDS_PCA963X=y
+CONFIG_LEDS_PCA995X=m
 CONFIG_LEDS_PWM=y
 CONFIG_LEDS_SYSCON=y
 CONFIG_LEDS_TRIGGER_TIMER=y
@@ -1025,6 +1024,7 @@ CONFIG_SECURITY=y
 CONFIG_CRYPTO_USER=y
 CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_ANUBIS=m
+CONFIG_CRYPTO_ARIA=m
 CONFIG_CRYPTO_BLOWFISH=m
 CONFIG_CRYPTO_CAMELLIA=m
 CONFIG_CRYPTO_CAST5=m
@@ -1062,6 +1062,7 @@ CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_SHA512_ARM64_CE=m
 CONFIG_CRYPTO_SHA3_ARM64=m
 CONFIG_CRYPTO_SM3_ARM64_CE=m
+CONFIG_CRYPTO_POLYVAL_ARM64_CE=m
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_BS=m
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
@@ -1099,7 +1100,3 @@ CONFIG_CORESIGHT_STM=m
 CONFIG_CORESIGHT_CPU_DEBUG=m
 CONFIG_CORESIGHT_CTI=m
 CONFIG_MEMTEST=y
-CONFIG_CRYPTO_SM3_GENERIC=m
-CONFIG_CRYPTO_SM4_GENERIC=m
-CONFIG_CRYPTO_ARIA=m
-CONFIG_CRYPTO_POLYVAL_ARM64_CE=m
